--- a/src/application/Faculty.fxml
+++ b/src/application/Faculty.fxml
@@ -1,5 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" scaleShape="false" xmlns="http://javafx.com/javafx/8.0.161" xmlns:fx="http://javafx.com/fxml/1" />
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1250.0" scaleShape="false" style="-fx-background-color: #F4A460;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Pane layoutX="1039.0" layoutY="348.0" prefHeight="234.0" prefWidth="193.0" style="-fx-border-color: black;">
+         <children>
+            <Button layoutX="36.0" layoutY="48.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Студенты" textFill="WHITE" />
+            <Button layoutX="36.0" layoutY="92.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Группы" textFill="WHITE" />
+            <Button layoutX="36.0" layoutY="138.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Факультеты" textFill="WHITE" />
+            <Button layoutX="36.0" layoutY="184.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Организации" textFill="WHITE" />
+            <Label layoutX="36.0" layoutY="4.0" prefHeight="36.0" prefWidth="121.0" text="Переход по окнам">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
+      <Pane layoutX="1036.0" layoutY="166.0" prefHeight="144.0" prefWidth="200.0" style="-fx-border-color: black;">
+         <children>
+            <Button layoutX="33.0" layoutY="14.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
+            <Button layoutX="33.0" layoutY="54.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
+            <Button layoutX="33.0" layoutY="94.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
+         </children>
+      </Pane>
+      <Pane layoutX="5.0" layoutY="166.0" prefHeight="144.0" prefWidth="297.0" style="-fx-border-color: black;">
+         <children>
+            <Label alignment="CENTER" layoutX="59.0" layoutY="14.0" prefHeight="36.0" prefWidth="121.0" text="Фильтры" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Button layoutX="4.0" layoutY="50.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="224.0" text="Фильтрация по количеству студентов" />
+            <Button layoutX="4.0" layoutY="98.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="224.0" text="Фильтрация по имени старосты" />
+            <TextField layoutX="231.0" layoutY="50.0" prefHeight="25.0" prefWidth="53.0" promptText="Число" />
+            <TextField layoutX="231.0" layoutY="98.0" prefHeight="25.0" prefWidth="53.0" promptText="Имя" />
+         </children>
+      </Pane>
+      <Label layoutX="484.0" layoutY="21.0" prefHeight="72.0" prefWidth="233.0" text="Данные факультетов" textAlignment="CENTER">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <TableView layoutX="310.0" layoutY="166.0" prefHeight="416.0" prefWidth="718.0">
+         <columns>
+            <TableColumn prefWidth="63.0" text="idFaculty" />
+            <TableColumn prefWidth="87.0" text="Name_of_faculty" />
+            <TableColumn prefWidth="178.0" text="Date_of_establishment_faculty" />
+            <TableColumn prefWidth="125.0" text="Name_of_head_of_faculty" />
+            <TableColumn prefWidth="176.0" text="Number_of_faculty_members" />
+            <TableColumn prefWidth="88.0" text="Members_now" />
+         </columns>
+      </TableView>
+   </children>
+</AnchorPane>
