--- a/src/application/Group.fxml
+++ b/src/application/Group.fxml
@@ -1,5 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" scaleShape="false" xmlns="http://javafx.com/javafx/8.0.161" xmlns:fx="http://javafx.com/fxml/1" />
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" scaleShape="false" style="-fx-background-color: #F4A460;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Pane layoutX="24.0" layoutY="165.0" prefHeight="144.0" prefWidth="286.0" style="-fx-border-color: black;">
+         <children>
+            <Label alignment="CENTER" layoutX="61.0" layoutY="14.0" prefHeight="36.0" prefWidth="121.0" text="Фильтры" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Button layoutX="7.0" layoutY="50.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="193.0" text="Фильтрация по числу студентов" />
+            <Button layoutX="7.0" layoutY="97.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="193.0" text="Фильтрация по имени старосты" />
+            <TextField layoutX="203.0" layoutY="50.0" prefHeight="25.0" prefWidth="57.0" promptText="Число" />
+            <TextField layoutX="206.0" layoutY="97.0" prefHeight="25.0" prefWidth="57.0" promptText="Имя" />
+         </children>
+      </Pane>
+      <Label layoutX="519.0" layoutY="24.0" prefHeight="72.0" prefWidth="162.0" text="Данные групп" textAlignment="CENTER">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Pane layoutX="993.0" layoutY="346.0" prefHeight="234.0" prefWidth="193.0" style="-fx-border-color: black;">
+         <children>
+            <Button layoutX="36.0" layoutY="48.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Студенты" textFill="WHITE" />
+            <Button layoutX="36.0" layoutY="92.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Группы" textFill="WHITE" />
+            <Button layoutX="36.0" layoutY="138.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Факультеты" textFill="WHITE" />
+            <Button layoutX="36.0" layoutY="184.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Организации" textFill="WHITE" />
+            <Label layoutX="36.0" layoutY="4.0" prefHeight="36.0" prefWidth="121.0" text="Переход по окнам">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
+      <Pane layoutX="986.0" layoutY="165.0" prefHeight="144.0" prefWidth="200.0" style="-fx-border-color: black;">
+         <children>
+            <Button layoutX="33.0" layoutY="14.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
+            <Button layoutX="33.0" layoutY="54.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
+            <Button layoutX="33.0" layoutY="94.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
+         </children>
+      </Pane>
+      <TableView layoutX="334.0" layoutY="165.0" prefHeight="415.0" prefWidth="642.0">
+        <columns>
+          <TableColumn prefWidth="93.0" text="idGroup" />
+          <TableColumn prefWidth="180.0" text="Number_of_group" />
+            <TableColumn prefWidth="145.0" text="Name_of_head_of_group" />
+            <TableColumn prefWidth="275.0" text="Number_of_group_members" />
+        </columns>
+      </TableView>
+   </children>
+</AnchorPane>
