--- a/src/application/Invite.fxml
+++ b/src/application/Invite.fxml
@@ -1,5 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" scaleShape="false" xmlns="http://javafx.com/javafx/8.0.161" xmlns:fx="http://javafx.com/fxml/1" />
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1250.0" scaleShape="false" style="-fx-background-color: #F4A460;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Pane layoutX="1056.0" layoutY="186.0" prefHeight="144.0" prefWidth="200.0" style="-fx-border-color: black;">
+         <children>
+            <Button layoutX="33.0" layoutY="14.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
+            <Button layoutX="33.0" layoutY="54.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
+            <Button layoutX="33.0" layoutY="94.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
+         </children>
+      </Pane>
+      <Pane layoutX="25.0" layoutY="186.0" prefHeight="144.0" prefWidth="352.0" style="-fx-border-color: black;">
+         <children>
+            <Label alignment="CENTER" layoutX="116.0" layoutY="14.0" prefHeight="36.0" prefWidth="121.0" text="Фильтры" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Button layoutX="4.0" layoutY="50.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="243.0" text="Фильтрация по дате приглашения" />
+            <Button layoutX="4.0" layoutY="98.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="243.0" text="Фильтрация по коду организации" />
+            <TextField alignment="CENTER" layoutX="262.0" layoutY="49.0" prefHeight="27.0" prefWidth="79.0" promptText="Дата" />
+            <TextField alignment="CENTER" layoutX="268.0" layoutY="98.0" prefHeight="25.0" prefWidth="67.0" promptText="Код" />
+         </children>
+      </Pane>
+      <Label layoutX="500.0" layoutY="33.0" prefHeight="72.0" prefWidth="251.0" text="Таблица приглашений" textAlignment="CENTER">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <TableView layoutX="384.0" layoutY="186.0" prefHeight="416.0" prefWidth="669.0">
+         <columns>
+            <TableColumn prefWidth="100.0" text="idInvite" />
+            <TableColumn prefWidth="77.0" text="idStudent" />
+            <TableColumn prefWidth="105.0" text="idOrganization" />
+            <TableColumn prefWidth="280.0" text="Message" />
+            <TableColumn prefWidth="106.0" text="Date" />
+         </columns>
+      </TableView>
+   </children>
+</AnchorPane>
