--- a/src/application/Student.fxml
+++ b/src/application/Student.fxml
@@ -1,5 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" scaleShape="false" xmlns="http://javafx.com/javafx/8.0.161" xmlns:fx="http://javafx.com/fxml/1" />
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" scaleShape="false" style="-fx-background-color: #F4A460;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Pane layoutX="993.0" layoutY="338.0" prefHeight="234.0" prefWidth="193.0" style="-fx-border-color: black;">
+         <children>
+            <Button layoutX="36.0" layoutY="48.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Студенты" textFill="WHITE" />
+            <Button layoutX="36.0" layoutY="92.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Группы" textFill="WHITE" />
+            <Button layoutX="36.0" layoutY="138.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Факультеты" textFill="WHITE" />
+            <Button layoutX="36.0" layoutY="184.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Организации" textFill="WHITE" />
+            <Label layoutX="36.0" layoutY="4.0" prefHeight="36.0" prefWidth="121.0" text="Переход по окнам">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
+      <Pane layoutX="986.0" layoutY="156.0" prefHeight="144.0" prefWidth="200.0" style="-fx-border-color: black;">
+         <children>
+            <Button layoutX="33.0" layoutY="14.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
+            <Button layoutX="33.0" layoutY="54.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
+            <Button layoutX="33.0" layoutY="94.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
+         </children>
+      </Pane>
+      <Pane layoutX="14.0" layoutY="156.0" prefHeight="144.0" prefWidth="232.0" style="-fx-border-color: black;">
+         <children>
+            <Label alignment="CENTER" layoutX="40.0" layoutY="14.0" prefHeight="36.0" prefWidth="121.0" text="Фильтры" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Button layoutX="7.0" layoutY="50.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="143.0" text="Фильтрация по полу" />
+            <Button layoutX="7.0" layoutY="94.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="143.0" text="Фильтрация по имени" />
+            <TextField layoutX="161.0" layoutY="50.0" prefHeight="25.0" prefWidth="67.0" promptText="Пол" />
+            <TextField layoutX="161.0" layoutY="94.0" prefHeight="25.0" prefWidth="67.0" promptText="Имя" />
+         </children>
+      </Pane>
+      <Label layoutX="485.0" layoutY="14.0" prefHeight="72.0" prefWidth="211.0" text="Данные студентов" textAlignment="CENTER">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <TableView layoutX="255.0" layoutY="156.0" prefHeight="416.0" prefWidth="718.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="IdStudent" />
+          <TableColumn prefWidth="75.0" text="Name" />
+            <TableColumn prefWidth="75.0" text="Surname" />
+            <TableColumn prefWidth="89.0" text="Middle_name" />
+            <TableColumn text="Date_of_birth" />
+            <TableColumn prefWidth="61.0" text="Sex" />
+            <TableColumn prefWidth="116.0" text="Year_of_enrollment" />
+            <TableColumn prefWidth="68.0" text="Status" />
+            <TableColumn prefWidth="78.0" text="Type" />
+        </columns>
+      </TableView>
+   </children>
+</AnchorPane>
