--- a/src/application/Economy.fxml
+++ b/src/application/Economy.fxml
@@ -2,27 +2,21 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" scaleShape="false" style="-fx-background-color: #F5DEB3;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1300.0" scaleShape="false" style="-fx-background-color: #F5DEB3;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField layoutX="284.0" layoutY="21.0" prefHeight="66.0" prefWidth="233.0" style="-fx-background-color: 0000000;" text="Окно экономики">
+      <TextField layoutX="535.0" layoutY="14.0" prefHeight="66.0" prefWidth="233.0" style="-fx-background-color: 0000000;" text="Окно экономики">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </TextField>
-      <Pane layoutX="151.0" layoutY="445.0" prefHeight="80.0" prefWidth="500.0" style="-fx-border-color: black;">
-         <children>
-            <Label layoutX="139.0" layoutY="2.0" prefHeight="25.0" prefWidth="223.0" text="Расходы на студенческие организации" textAlignment="CENTER" />
-            <TextField layoutX="52.0" layoutY="28.0" prefHeight="25.0" prefWidth="174.0" promptText="Введите номер организации" />
-            <TextField layoutX="288.0" layoutY="28.0" />
-         </children>
-      </Pane>
-      <Pane layoutX="151.0" layoutY="150.0" prefHeight="265.0" prefWidth="500.0" style="-fx-border-color: black;">
+      <Pane layoutX="35.0" layoutY="191.0" prefHeight="265.0" prefWidth="500.0" style="-fx-border-color: black;">
          <children>
             <TextField alignment="CENTER" layoutX="38.0" layoutY="37.0" prefHeight="25.0" prefWidth="168.0" promptText="Введите номер факультета" />
             <TextField layoutX="280.0" layoutY="37.0" />
@@ -38,5 +32,18 @@
             <Font size="14.0" />
          </font>
       </Button>
+      <TableView layoutX="545.0" layoutY="150.0" prefHeight="416.0" prefWidth="718.0">
+         <columns>
+            <TableColumn prefWidth="75.0" text="IdStudent" />
+            <TableColumn prefWidth="75.0" text="Name" />
+            <TableColumn prefWidth="75.0" text="Surname" />
+            <TableColumn prefWidth="89.0" text="Middle_name" />
+            <TableColumn text="Date_of_birth" />
+            <TableColumn prefWidth="61.0" text="Sex" />
+            <TableColumn prefWidth="116.0" text="Year_of_enrollment" />
+            <TableColumn prefWidth="68.0" text="Status" />
+            <TableColumn prefWidth="78.0" text="Type" />
+         </columns>
+      </TableView>
    </children>
 </AnchorPane>
