--- a/src/application/client.fxml
+++ b/src/application/client.fxml
@@ -2,46 +2,42 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" scaleShape="false" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" scaleShape="false" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #F2E0CA;">
+      <Pane prefHeight="600.0" prefWidth="1200.0" style="-fx-background-color: #F2E0CA;">
          <effect>
             <ColorAdjust />
          </effect>
          <children>
-            <Label layoutX="148.0" layoutY="238.0" prefHeight="33.0" prefWidth="157.0" text="Авторизация студентов" textAlignment="CENTER">
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="466.0" layoutY="24.0" prefHeight="48.0" prefWidth="268.0" text="Список пользователей" textAlignment="CENTER">
                <font>
-                  <Font name="System Bold" size="13.0" />
+                  <Font name="System Bold" size="23.0" />
                </font>
             </Label>
-            <PasswordField layoutX="152.0" layoutY="315.0" />
-            <Button layoutX="309.0" layoutY="506.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="199.0" style="-fx-background-color: #25213E;" text="Ограниченный доступ" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-            <Label layoutX="486.0" layoutY="238.0" prefHeight="33.0" prefWidth="176.0" text="Авторизация сотрудников" textAlignment="CENTER">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-            </Label>
-            <TextField layoutX="152.0" layoutY="290.0" />
-            <PasswordField layoutX="500.0" layoutY="315.0" />
-            <TextField layoutX="500.0" layoutY="290.0" />
-            <TextField alignment="TOP_CENTER" layoutX="276.0" layoutY="81.0" style="-fx-background-color: 000000;" text="Авторизация">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font>
-            </TextField>
-            <Pane layoutX="127.0" layoutY="65.0" prefHeight="350.0" prefWidth="550.0" style="-fx-border-color: black;" />
+            <TableView layoutX="250.0" layoutY="120.0" prefHeight="400.0" prefWidth="700.0">
+              <columns>
+                <TableColumn prefWidth="75.0" text="IdClient" />
+                <TableColumn prefWidth="75.0" text="Name" />
+                  <TableColumn prefWidth="82.0" text="Surname" />
+                  <TableColumn prefWidth="127.0" text="Date_of_autorization" />
+                  <TableColumn prefWidth="128.0" text="Access_level" />
+                  <TableColumn prefWidth="211.0" text="Info" />
+              </columns>
+            </TableView>
+            <Pane layoutX="986.0" layoutY="120.0" prefHeight="144.0" prefWidth="200.0" style="-fx-border-color: black;">
+               <children>
+                  <Button layoutX="33.0" layoutY="14.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
+                  <Button layoutX="33.0" layoutY="54.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
+                  <Button layoutX="33.0" layoutY="94.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
+               </children>
+            </Pane>
          </children>
       </Pane>
    </children>
