--- a/src/application/kalculator.fxml
+++ b/src/application/kalculator.fxml
@@ -1,42 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" scaleShape="false" style="-fx-background-color: #A2B86F;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane layoutX="100.0" layoutY="100.0" prefHeight="400.0" prefWidth="600.0" style="-fx-border-color: black;">
+      <Pane layoutX="100.0" layoutY="102.0" prefHeight="408.0" prefWidth="603.0" style="-fx-border-color: black;">
          <children>
             <Pane layoutX="14.0" layoutY="306.0" prefHeight="80.0" prefWidth="571.0" style="-fx-border-color: black;">
                <children>
-                  <TextField layoutX="14.0" layoutY="20.0" prefHeight="45.0" prefWidth="178.0" promptText="Введите номер предмета" />
-                  <TextField layoutX="211.0" layoutY="20.0" prefHeight="45.0" prefWidth="185.0" promptText="Средняя оценка по предмету" />
-                  <TextField layoutX="408.0" layoutY="20.0" prefHeight="45.0" prefWidth="149.0" />
+                  <TextField layoutX="90.0" layoutY="25.0" prefHeight="45.0" prefWidth="178.0" promptText="Введите кол-во студентов" />
+                  <TextField layoutX="325.0" layoutY="25.0" prefHeight="45.0" prefWidth="140.0" />
+                  <Label layoutX="93.0" layoutY="4.0" prefHeight="21.0" prefWidth="385.0" text="Вычисление расходов на стипендии для N хорошистов">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
                </children>
             </Pane>
             <Pane layoutX="14.0" layoutY="219.0" prefHeight="80.0" prefWidth="571.0" style="-fx-border-color: black;">
                <children>
-                  <TextField layoutX="14.0" layoutY="20.0" prefHeight="45.0" prefWidth="178.0" promptText="Введите номер факультета" />
-                  <TextField layoutX="211.0" layoutY="18.0" prefHeight="45.0" prefWidth="185.0" promptText="Средняя оценка по факультету" />
-                  <TextField layoutX="408.0" layoutY="20.0" prefHeight="45.0" prefWidth="149.0" />
+                  <TextField layoutX="90.0" layoutY="25.0" prefHeight="45.0" prefWidth="178.0" promptText="Введите кол-во студентов" />
+                  <TextField layoutX="325.0" layoutY="25.0" prefHeight="45.0" prefWidth="140.0" />
+                  <Label layoutX="87.0" layoutY="4.0" prefHeight="21.0" prefWidth="397.0" text="Вычисление расходов на стипендии для N отличников">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
                </children>
             </Pane>
             <Pane layoutX="15.0" layoutY="133.0" prefHeight="80.0" prefWidth="571.0" style="-fx-border-color: black;">
                <children>
-                  <TextField layoutX="14.0" layoutY="20.0" prefHeight="45.0" prefWidth="178.0" promptText="Введите номер группы" />
-                  <TextField layoutX="211.0" layoutY="20.0" prefHeight="45.0" prefWidth="185.0" promptText="Средняя оценка по группе" />
-                  <TextField layoutX="408.0" layoutY="20.0" prefHeight="45.0" prefWidth="149.0" />
+                  <TextField layoutX="90.0" layoutY="25.0" prefHeight="45.0" prefWidth="178.0" promptText="Введите среднюю оценку" />
+                  <TextField layoutX="325.0" layoutY="25.0" prefHeight="45.0" prefWidth="140.0" />
+                  <Label layoutX="72.0" layoutY="4.0" prefHeight="21.0" prefWidth="428.0" text="Вычисление размера стипендии по средней оценке студента">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
                </children>
             </Pane>
-            <TextField layoutX="147.0" layoutY="14.0" prefHeight="60.0" prefWidth="308.0" style="-fx-background-color: 0000000;" text="Калькулятор оценок">
+            <Label alignment="CENTER" layoutX="209.0" layoutY="14.0" prefHeight="45.0" prefWidth="185.0" text="Калькулятор" textAlignment="CENTER">
                <font>
                   <Font name="System Bold" size="27.0" />
                </font>
-            </TextField>
+            </Label>
          </children>
       </Pane>
       <Button layoutX="300.0" layoutY="519.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="201.0" style="-fx-background-color: #25213E;" text="Запустить калькулятор" textFill="#fcfcfc">
