--- a/src/application/Group.fxml
+++ b/src/application/Group.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" scaleShape="false" style="-fx-background-color: #F4A460;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" scaleShape="false" style="-fx-background-color: #F4A460;" xmlns="http://javafx.com/javafx/8.0.161" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ContrForGroup">
    <children>
       <Pane layoutX="24.0" layoutY="165.0" prefHeight="144.0" prefWidth="286.0" style="-fx-border-color: black;">
          <children>
@@ -45,18 +44,52 @@
       </Pane>
       <Pane layoutX="986.0" layoutY="165.0" prefHeight="144.0" prefWidth="200.0" style="-fx-border-color: black;">
          <children>
-            <Button layoutX="33.0" layoutY="14.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
-            <Button layoutX="33.0" layoutY="54.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
-            <Button layoutX="33.0" layoutY="94.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
+            <Button fx:id="bNew" layoutX="33.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleNew" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
+            <Button fx:id="bEdit" layoutX="33.0" layoutY="54.0" mnemonicParsing="false" onAction="#handleUpd" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
+            <Button fx:id="bDelete" layoutX="33.0" layoutY="94.0" mnemonicParsing="false" onAction="#handleDel" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
          </children>
       </Pane>
-      <TableView layoutX="334.0" layoutY="165.0" prefHeight="415.0" prefWidth="642.0">
+      <TableView fx:id="tvGroup" layoutX="334.0" layoutY="165.0" prefHeight="415.0" prefWidth="642.0">
         <columns>
-          <TableColumn prefWidth="93.0" text="idGroup" />
-          <TableColumn prefWidth="180.0" text="Number_of_group" />
-            <TableColumn prefWidth="145.0" text="Name_of_head_of_group" />
-            <TableColumn prefWidth="275.0" text="Number_of_group_members" />
+          <TableColumn fx:id="tcidGroup" prefWidth="93.0" text="idGroup" />
+          <TableColumn fx:id="tcNumber_of_group" prefWidth="180.0" text="Number_of_group" />
+            <TableColumn fx:id="tcName_of_head_of_group" prefWidth="145.0" text="Name_of_head_of_group" />
+            <TableColumn fx:id="tcNumber_of_group_members" prefWidth="275.0" text="Number_of_group_members" />
+            <TableColumn fx:id="tcFaculty_idFaculty" prefWidth="75.0" text="Faculty_idFaculty" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
+      <TextField fx:id="tfidGroup" layoutX="167.0" layoutY="334.0" AnchorPane.topAnchor="335.0" />
+      <TextField fx:id="tfFaculty_idFaculty" layoutX="167.0" layoutY="488.0" AnchorPane.topAnchor="495.0" />
+      <TextField fx:id="tfNumber_of_group_members" layoutX="167.0" layoutY="451.0" AnchorPane.topAnchor="455.0" />
+      <TextField fx:id="tfName_of_head_of_group" layoutX="167.0" layoutY="408.0" AnchorPane.topAnchor="415.0" />
+      <TextField fx:id="tfNumber_of_group" layoutX="167.0" layoutY="373.0" AnchorPane.topAnchor="375.0" />
+      <Label layoutX="44.0" layoutY="334.0" text="ID группы">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="44.0" layoutY="455.0" text="Число студентов">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="44.0" layoutY="415.0" text="Староста">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="44.0" layoutY="375.0" text="Номер группы">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="44.0" layoutY="495.0" text="Факультет">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
