--- a/src/application/Organization.fxml
+++ b/src/application/Organization.fxml
@@ -9,14 +9,13 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1250.0" scaleShape="false" style="-fx-background-color: #F4A460;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1250.0" scaleShape="false" style="-fx-background-color: #F4A460;" xmlns="http://javafx.com/javafx/8.0.161" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ContfForOrg">
    <children>
-      <Pane layoutX="1046.0" layoutY="176.0" prefHeight="144.0" prefWidth="200.0" style="-fx-border-color: black;">
+      <Pane layoutX="1.0" layoutY="556.0" prefHeight="72.0" prefWidth="457.0" style="-fx-border-color: black;">
          <children>
-            <Button layoutX="33.0" layoutY="14.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
-            <Button layoutX="33.0" layoutY="54.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
-            <Button layoutX="33.0" layoutY="94.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
+            <Button fx:id="bNew" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleNew" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
+            <Button fx:id="bEdit" layoutX="161.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleUpd" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
+            <Button fx:id="bDelete" layoutX="308.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleDel" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
          </children>
       </Pane>
       <Pane layoutX="15.0" layoutY="176.0" prefHeight="144.0" prefWidth="352.0" style="-fx-border-color: black;">
@@ -37,15 +36,18 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <TableView layoutX="418.0" layoutY="176.0" prefHeight="416.0" prefWidth="595.0">
+      <TableView fx:id="tvOrganization" layoutX="473.0" layoutY="176.0" prefHeight="454.0" prefWidth="540.0">
          <columns>
-            <TableColumn prefWidth="100.0" text="idOrganizatiom" />
-            <TableColumn prefWidth="154.0" text="Name_of_organization" />
-            <TableColumn prefWidth="196.0" text="Name_of_head_of_organization" />
-            <TableColumn prefWidth="144.0" text="Organization_direction" />
+            <TableColumn fx:id="tcidOrganization" prefWidth="100.0" text="idOrganizatiom" />
+            <TableColumn fx:id="tcName_of_organization" prefWidth="154.0" text="Name_of_organization" />
+            <TableColumn fx:id="tcName_of_head_of_organization" prefWidth="196.0" text="Name_of_head_of_organization" />
+            <TableColumn fx:id="tcOrganization_direction" prefWidth="144.0" text="Organization_direction" />
          </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
-      <Pane layoutX="1049.0" layoutY="358.0" prefHeight="234.0" prefWidth="193.0" style="-fx-border-color: black;">
+      <Pane layoutX="1036.0" layoutY="398.0" prefHeight="234.0" prefWidth="193.0" style="-fx-border-color: black;">
          <children>
             <Button layoutX="36.0" layoutY="48.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Студенты" textFill="WHITE" />
             <Button layoutX="36.0" layoutY="92.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Группы" textFill="WHITE" />
@@ -58,5 +60,29 @@
             </Label>
          </children>
       </Pane>
+      <TextField fx:id="tfidOrganization" layoutX="212.0" layoutY="346.0" AnchorPane.topAnchor="345.0" />
+      <TextField fx:id="tfOrganization_direction" layoutX="212.0" layoutY="486.0" prefHeight="72.0" prefWidth="186.0" AnchorPane.topAnchor="465.0" />
+      <TextField fx:id="tfName_of_head_of_organization" layoutX="212.0" layoutY="450.0" AnchorPane.topAnchor="425.0" />
+      <TextField fx:id="tfName_of_organization" layoutX="212.0" layoutY="410.0" AnchorPane.topAnchor="385.0" />
+      <Label layoutX="78.0" layoutY="346.0" text="ID организации">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="78.0" layoutY="463.0" text="Расположение">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="78.0" layoutY="425.0" text="Лидер ">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="78.0" layoutY="385.0" text="Название">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
