--- a/src/application/Student.fxml
+++ b/src/application/Student.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -9,15 +10,14 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" scaleShape="false" style="-fx-background-color: #F4A460;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" scaleShape="false" style="-fx-background-color: #F4A460;" xmlns="http://javafx.com/javafx/8.0.161" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ContrForStudent">
    <children>
-      <Pane layoutX="993.0" layoutY="338.0" prefHeight="234.0" prefWidth="193.0" style="-fx-border-color: black;">
+      <Pane layoutX="985.0" layoutY="391.0" prefHeight="234.0" prefWidth="193.0" style="-fx-border-color: black;">
          <children>
             <Button layoutX="36.0" layoutY="48.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Студенты" textFill="WHITE" />
-            <Button layoutX="36.0" layoutY="92.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Группы" textFill="WHITE" />
+            <Button fx:id="bGroup" layoutX="36.0" layoutY="92.0" mnemonicParsing="false" onAction="#winGroup" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Группы" textFill="WHITE" />
             <Button layoutX="36.0" layoutY="138.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Факультеты" textFill="WHITE" />
-            <Button layoutX="36.0" layoutY="184.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Организации" textFill="WHITE" />
+            <Button fx:id="bOrg" layoutX="36.0" layoutY="184.0" mnemonicParsing="false" onAction="#winOrg" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Организации" textFill="WHITE" />
             <Label layoutX="36.0" layoutY="4.0" prefHeight="36.0" prefWidth="121.0" text="Переход по окнам">
                <font>
                   <Font size="14.0" />
@@ -25,43 +25,107 @@
             </Label>
          </children>
       </Pane>
-      <Pane layoutX="986.0" layoutY="156.0" prefHeight="144.0" prefWidth="200.0" style="-fx-border-color: black;">
+      <Pane layoutX="25.0" layoutY="582.0" prefHeight="65.0" prefWidth="461.0" style="-fx-border-color: black;">
          <children>
-            <Button layoutX="33.0" layoutY="14.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
-            <Button layoutX="33.0" layoutY="54.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
-            <Button layoutX="33.0" layoutY="94.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
+            <Button fx:id="bNew" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleNew" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
+            <Button fx:id="bEdit" layoutX="167.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleUpd" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
+            <Button fx:id="bDelete" layoutX="316.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleDel" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
          </children>
       </Pane>
-      <Pane layoutX="14.0" layoutY="156.0" prefHeight="144.0" prefWidth="232.0" style="-fx-border-color: black;">
+      <Pane layoutX="966.0" layoutY="156.0" prefHeight="144.0" prefWidth="231.0" style="-fx-border-color: black;">
          <children>
             <Label alignment="CENTER" layoutX="40.0" layoutY="14.0" prefHeight="36.0" prefWidth="121.0" text="Фильтры" textAlignment="CENTER">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Button layoutX="7.0" layoutY="50.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="143.0" text="Фильтрация по полу" />
-            <Button layoutX="7.0" layoutY="94.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="143.0" text="Фильтрация по имени" />
-            <TextField layoutX="161.0" layoutY="50.0" prefHeight="25.0" prefWidth="67.0" promptText="Пол" />
-            <TextField layoutX="161.0" layoutY="94.0" prefHeight="25.0" prefWidth="67.0" promptText="Имя" />
+            <Button layoutX="7.0" layoutY="50.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="134.0" text="Фильтрация по полу" />
+            <Button layoutX="7.0" layoutY="94.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="134.0" text="Фильтрация по имени" />
+            <TextField layoutX="153.0" layoutY="50.0" prefHeight="25.0" prefWidth="67.0" promptText="Пол" />
+            <TextField layoutX="153.0" layoutY="94.0" prefHeight="25.0" prefWidth="67.0" promptText="Имя" />
          </children>
       </Pane>
-      <Label layoutX="485.0" layoutY="14.0" prefHeight="72.0" prefWidth="211.0" text="Данные студентов" textAlignment="CENTER">
+      <Label layoutX="495.0" layoutY="33.0" prefHeight="72.0" prefWidth="211.0" text="Данные студентов" textAlignment="CENTER">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <TableView layoutX="255.0" layoutY="156.0" prefHeight="416.0" prefWidth="718.0">
+      <TableView fx:id="tvStudent" layoutX="500.0" layoutY="158.0" prefHeight="495.0" prefWidth="461.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="IdStudent" />
-          <TableColumn prefWidth="75.0" text="Name" />
-            <TableColumn prefWidth="75.0" text="Surname" />
-            <TableColumn prefWidth="89.0" text="Middle_name" />
-            <TableColumn text="Date_of_birth" />
-            <TableColumn prefWidth="61.0" text="Sex" />
-            <TableColumn prefWidth="116.0" text="Year_of_enrollment" />
-            <TableColumn prefWidth="68.0" text="Status" />
-            <TableColumn prefWidth="78.0" text="Type" />
+          <TableColumn fx:id="tcIdStudent" prefWidth="75.0" text="IdStudent" />
+          <TableColumn fx:id="tcName" prefWidth="75.0" text="Name" />
+            <TableColumn fx:id="tcSurname" prefWidth="75.0" text="Surname" />
+            <TableColumn fx:id="tcMiddle_name" prefWidth="89.0" text="Middle_name" />
+            <TableColumn fx:id="tcDate_of_birth" text="Date_of_birth" />
+            <TableColumn fx:id="tcSex" prefWidth="61.0" text="Sex" />
+            <TableColumn fx:id="tcYear_of_enrollment" prefWidth="116.0" text="Year_of_enrollment" />
+            <TableColumn fx:id="tcStatus" prefWidth="68.0" text="Status" />
+            <TableColumn fx:id="tcType" prefWidth="78.0" text="Type" />
+            <TableColumn fx:id="tcIdGroup" prefWidth="75.0" text="idGroup" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
+      <TextField fx:id="tfSurname" layoutX="233.0" layoutY="255.0" prefHeight="25.0" prefWidth="200.0" promptText="Фамилия" AnchorPane.topAnchor="255.0" />
+      <TextField fx:id="tfName" layoutX="233.0" layoutY="215.0" prefHeight="25.0" prefWidth="200.0" promptText="Имя" AnchorPane.topAnchor="215.0" />
+      <TextField fx:id="tfIdStudent" editable="false" layoutX="233.0" layoutY="175.0" prefHeight="25.0" prefWidth="200.0" promptText="ID" AnchorPane.topAnchor="175.0" />
+      <TextField fx:id="tfMiddle_name" layoutX="233.0" layoutY="295.0" prefHeight="25.0" prefWidth="200.0" promptText="Отчество" AnchorPane.topAnchor="295.0" />
+      <TextField fx:id="tfDate_of_birth" layoutX="233.0" layoutY="335.0" prefHeight="25.0" prefWidth="200.0" promptText="Дата рождения" AnchorPane.topAnchor="335.0" />
+      <TextField fx:id="tfYear_of_enrollment" layoutX="233.0" layoutY="415.0" prefHeight="25.0" prefWidth="200.0" promptText="Год поступления" AnchorPane.topAnchor="415.0" />
+      <Label layoutX="48.0" layoutY="175.0" text="ID студента">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="48.0" layoutY="215.0" text="Имя студента">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="48.0" layoutY="255.0" text="Фамилия студента">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="48.0" layoutY="295.0" prefHeight="25.0" prefWidth="143.0" text="Отчество студента">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="48.0" layoutY="335.0" prefHeight="25.0" prefWidth="185.0" text="Дата рождения студента">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="48.0" layoutY="375.0" prefHeight="25.0" prefWidth="185.0" text="Пол студента">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="48.0" layoutY="415.0" prefHeight="25.0" prefWidth="185.0" text="Год поступления">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="48.0" layoutY="455.0" prefHeight="25.0" prefWidth="185.0" text="Статус">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="48.0" layoutY="495.0" prefHeight="25.0" prefWidth="185.0" text="Стипендия">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="48.0" layoutY="535.0" prefHeight="25.0" prefWidth="185.0" text="Группа">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <ComboBox fx:id="cbMRID" layoutX="233.0" layoutY="496.0" prefHeight="25.0" prefWidth="200.0" />
+      <ComboBox fx:id="cbSID" layoutX="233.0" layoutY="535.0" prefHeight="25.0" prefWidth="200.0" />
+      <ComboBox fx:id="cbSex" layoutX="233.0" layoutY="375.0" prefHeight="25.0" prefWidth="200.0" />
+      <ComboBox fx:id="cbStatus" layoutX="233.0" layoutY="455.0" prefHeight="25.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
