--- a/src/application/Faculty.fxml
+++ b/src/application/Faculty.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1250.0" scaleShape="false" style="-fx-background-color: #F4A460;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane layoutX="1039.0" layoutY="348.0" prefHeight="234.0" prefWidth="193.0" style="-fx-border-color: black;">
@@ -27,14 +26,14 @@
       </Pane>
       <Pane layoutX="1036.0" layoutY="166.0" prefHeight="144.0" prefWidth="200.0" style="-fx-border-color: black;">
          <children>
-            <Button layoutX="33.0" layoutY="14.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
-            <Button layoutX="33.0" layoutY="54.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
-            <Button layoutX="33.0" layoutY="94.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
+            <Button fx:id="bNew" layoutX="33.0" layoutY="14.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
+            <Button fx:id="bEdit" layoutX="33.0" layoutY="54.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
+            <Button fx:id="bDelete" layoutX="33.0" layoutY="94.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
          </children>
       </Pane>
-      <Pane layoutX="5.0" layoutY="166.0" prefHeight="144.0" prefWidth="297.0" style="-fx-border-color: black;">
+      <Pane layoutX="65.0" layoutY="166.0" prefHeight="144.0" prefWidth="297.0" style="-fx-border-color: black;">
          <children>
-            <Label alignment="CENTER" layoutX="59.0" layoutY="14.0" prefHeight="36.0" prefWidth="121.0" text="Фильтры" textAlignment="CENTER">
+            <Label alignment="CENTER" layoutX="56.0" layoutY="14.0" prefHeight="36.0" prefWidth="121.0" text="Фильтры" textAlignment="CENTER">
                <font>
                   <Font size="14.0" />
                </font>
@@ -50,15 +49,51 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <TableView layoutX="310.0" layoutY="166.0" prefHeight="416.0" prefWidth="718.0">
+      <TableView layoutX="441.0" layoutY="167.0" prefHeight="416.0" prefWidth="552.0">
          <columns>
-            <TableColumn prefWidth="63.0" text="idFaculty" />
-            <TableColumn prefWidth="87.0" text="Name_of_faculty" />
-            <TableColumn prefWidth="178.0" text="Date_of_establishment_faculty" />
-            <TableColumn prefWidth="125.0" text="Name_of_head_of_faculty" />
-            <TableColumn prefWidth="176.0" text="Number_of_faculty_members" />
-            <TableColumn prefWidth="88.0" text="Members_now" />
+            <TableColumn prefWidth="59.0" text="idFaculty" />
+            <TableColumn prefWidth="51.0" text="Name_of_faculty" />
+            <TableColumn prefWidth="45.0" text="Date_of_establishment_faculty" />
+            <TableColumn prefWidth="162.0" text="Name_of_head_of_faculty" />
+            <TableColumn prefWidth="126.0" text="Number_of_faculty_members" />
+            <TableColumn prefWidth="106.0" text="Members_now" />
          </columns>
       </TableView>
+      <Label layoutX="14.0" layoutY="348.0" text="ID факультета">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="14.0" layoutY="509.0" text="Суммарное число членов факультета">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="14.0" layoutY="386.0" text="Название факультета">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="14.0" layoutY="427.0" text="Дата основания факультета">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="14.0" layoutY="465.0" text="Имя директора факультета">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="14.0" layoutY="550.0" text="Актуальное число членов факультета">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <TextField layoutX="291.0" layoutY="550.0" prefHeight="25.0" prefWidth="121.0" />
+      <TextField layoutX="292.0" layoutY="509.0" prefHeight="25.0" prefWidth="121.0" />
+      <TextField layoutX="292.0" layoutY="465.0" prefHeight="25.0" prefWidth="121.0" />
+      <TextField layoutX="292.0" layoutY="427.0" prefHeight="25.0" prefWidth="121.0" />
+      <TextField layoutX="292.0" layoutY="386.0" prefHeight="25.0" prefWidth="121.0" />
+      <TextField layoutX="292.0" layoutY="348.0" prefHeight="25.0" prefWidth="121.0" />
    </children>
 </AnchorPane>
